# Lena

./: .gitignore  CMakeLists.txt  README-zh_CN.md  README.md  common.cpp  common.h  lena_client.cpp  lena_client.h  log.h  main_window.cpp  main_window.h  request_parser.cpp  request_parser.h  tray_icon.cpp  tray_icon.h  ui_main.cpp
